--- a/client/src/components/landing/landing-components/info/info.css
+++ b/client/src/components/landing/landing-components/info/info.css
@@ -7,7 +7,7 @@
   padding: 40px;
 }
 .mainCard {
-  width: 80%;
+  width: 90%;
   height: 600px;
   border-radius: 40px;
   padding: 30px;
@@ -24,7 +24,7 @@
 }
 .heading {
   font-weight: 540;
-  font-size: 36px;
+  font-size: 2rem;
   color: rgb(87, 87, 87);
 }
 .cards {
@@ -36,7 +36,7 @@
 .card {
   background-color: rgb(242, 242, 242);
   width: fit-content;
-  padding: 14px 40px;
+  padding: 1rem 1.7rem;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 6px rgba(0, 0, 0, 0.12);
 }
